--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
          <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css"/>
         <title>Netflix India – Watch TV Shows Online, Watch Movies Online</title>
+        <meta name="google-site-verification" content="mbuEacHhniwdmXqpK85WNI5ufB4B_DuwpCznf3tSGaw" />
     </head>
     <body>
         <div class="main">
